Put Jekyll at the top level.
No more org. Oh well.

--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,11 @@
 title: "Jeff Bellegarde's blog"
 email: bellegar@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  "Whatever stuff I'm working on at the moment."
+  Random stuff about programming and Agile.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://http://jeffbellegarde.github.io/" # the base hostname & protocol for your site
+url: "http://jeffbellegarde.github.io" # the base hostname & protocol for your site
 github_username:  JeffBellegarde
 
 # Build settings
 markdown: kramdown
+exclude: [vendor]
