Add Season.html page.

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: "Jeff Bellegarde's blog"
+title: "Overwatch Analytics"
 email: bellegar@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Random stuff about programming and Agile.
+  Analyzing Overwatch League games.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://jeffbellegarde.github.io" # the base hostname & protocol for your site
 github_username:  JeffBellegarde
